[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"


# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort" # 禁用 panic 时栈展开

# --release
[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
